improve UI for users, categories management